name:               hjsonpointer
version:            1.5.0
synopsis:           JSON Pointer library
homepage:           https://github.com/seagreen/hjsonpointer
license:            MIT
license-file:       MIT-LICENSE.txt
author:             Ian Grant Jeffries
maintainer:         ian@housejeffries.com
category:           Data
build-type:         Simple
cabal-version:      >=1.10
-- Rerun multi-ghc-travis (executable make-travis-yml-2) after changing:
Tested-With:        GHC == 8.0.2, GHC == 8.2.2, GHC == 8.4.1
extra-source-files:
  changelog.md
  README.md

library
  hs-source-dirs:
    src
  default-language: Haskell2010
  ghc-options:
    -Wall
  exposed-modules:
    JSONPointer
  build-depends:
      base
    , aeson
    , hashable
    , unordered-containers
    , text
    , vector

test-suite unit
  hs-source-dirs:
    test
    ./
  main-is: Unit.hs
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  default-extensions:
    OverloadedStrings
  ghc-options:
    -Wall
    -fno-warn-orphans
  other-modules: Example
  build-depends:
      aeson
    , base
    , hjsonpointer
    , hspec
    , http-types
    , QuickCheck
    , unordered-containers
    , text
    , vector
